--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,3 +2,61 @@
   padding: 0;
   margin: 0;
 }
+
+html, body {
+  width: 100%;
+  height: 100%;
+  min-width: 1200px;
+}
+
+.page {
+  width: 100%;
+  height: 100%;
+}
+
+.page-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 240px;
+  height: 100%;
+
+  background: #32325d;
+  padding: 0 1rem;
+}
+
+.page-right {
+  height: 100%;
+  width: 100%;
+  min-width: 1200px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding-left: 240px;
+
+  .page-right-top {
+    width: 100%;
+    height: 50px;
+    border-bottom: 1px solid #eeeeee;
+    padding: 0 1rem;
+    line-height: 50px;
+  }
+
+  .page-right-content {
+    padding: 1rem;
+  }
+}
+
+.page-login {
+  width: 100%;
+  padding: 10%;
+}
+
+.form-login {
+  width: 50%;
+  max-width: 480px;
+  margin: 5rem auto;
+  border: 1px solid #eeeeee;
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
