--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,3 +1,4 @@
+
 * {
   padding: 0;
   margin: 0;
@@ -7,6 +8,7 @@ html, body {
   width: 100%;
   height: 100%;
   min-width: 1200px;
+  font-size: 63%;
 }
 
 .page {
@@ -29,6 +31,7 @@ html, body {
     border-bottom: 0.5px solid #6c757d;
     color: #ffffff;
     padding: 0 1rem;
+    font-size: 1.4rem;
   }
 
   .page-left-navs {
@@ -40,7 +43,7 @@ html, body {
         padding: 0 1rem;
         a {
           color: #ffffff;
-          font-size: 13px;
+          font-size: 1.2rem;
         }
       }
     }
